fix(web-components): updated styling to fix tooltip positioning
posiion:relative on the ic-input-* elements were pushing the tooltip out of place. The position
property has been removed from parents and added to the direct parent of the buttons where
applicable

--- a/packages/web-components/src/components/ic-input-container/ic-input-container.css
+++ b/packages/web-components/src/components/ic-input-container/ic-input-container.css
@@ -1,5 +1,4 @@
 ic-input-container .component-container {
   display: flex;
   flex-direction: column;
-  position: relative;
 }
